--- a/style.css
+++ b/style.css
@@ -11,7 +11,9 @@ body {
 #headers {
   width: 100%;
   height: 100vh;
-  /* background-image: url(/images/background.png); */
+  background-image: url(/images/myimg1.jpg);
+  background-size: cover;
+  background-position: center;
 }
 #container {
   padding: 10px 10%;
@@ -65,6 +67,6 @@ nav ul li a:hover::after {
 #user-detail-intro {
   font-size: 20px;
   margin-top: 10px;
-  /* width: 50%; */
+  width: 60%;
   text-align: justify;
 }
