--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
 #headers {
   width: 100%;
   height: 100vh;
-  background-image: url(/images/myimg1.jpg);
+  background-image: url(images/myimg1.jpg);
   background-size: cover;
   background-position: center;
 }
