--- a/style.css
+++ b/style.css
@@ -149,9 +149,11 @@ nav ul li a:hover::after {
 #main_projects {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: repeat(2, 1fr);
   height: 100vh;
-  gap: 20px;
-  padding: 50px;
+  row-gap: 30px;
+  column-gap: 30px;
+  padding: 30px;
   /* border: 1px solid white;  */
 }
 
