--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1121,7 +1121,7 @@ textarea.input-field {
   .navbar-list > li {
     margin: 0;
     padding: 0;
-    overflow: visible;
+    overflow: hidden;
   }
 
   .navbar-list {
